# ChemWeaver

./: .gitignore  CITATION.cff  COMMUNITY_ANNOUNCEMENTS.md  COMPLETION_SUMMARY.md  DEPLOYMENT_GUIDE.md  INSTALL.md  LICENSE  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  SCI_READINESS_CHECKLIST.md  TOKEN_FIX.md  deploy-local.sh  deploy.sh  deploy_chemweaver.sh  install_dependencies.sh  push-github.sh  pyproject.toml  requirements.txt  skill.md
.github/: COMMIT_TEMPLATE.md
.github/workflows/: ci.yml
Independent Reproducibility Validation/: INDEPENDENT_REPRODUCIBILITY_REPORT.md  README.md
Independent Reproducibility Validation/validation_2026-02-06_Benjamin_Hou/: generate_figure_6.py  simplified_validation.py
Independent Reproducibility Validation/validation_2026-02-06_Benjamin_Hou/figure_6_output/: figure_6.eps  figure_6_supplementary.json  validation_data.csv
Independent Reproducibility Validation/validation_2026-02-06_Benjamin_Hou/independent_validation_results/: figure_6_data.json  validation_report.json
assets/: LOGO_INSTRUCTIONS.md  README.md
data/: example_compounds.smi
docker/: Dockerfile
docs/: architecture.md  benchmark_philosophy.md  citation_usage.md  manuscript_evidence_mapping.md  reproducibility.md
examples/: __init__.py
scripts/: reproduce_figure6.sh
src/chemweaver/: __init__.py  workflow_runner.py
src/chemweaver/ai/: __init__.py
src/chemweaver/ai/inference/: decision_layer.py
src/chemweaver/ai/innovations/: __init__.py
src/chemweaver/ai/models/: surrogate.py
src/chemweaver/ai/uncertainty/: quantification.py
src/chemweaver/benchmark/: PAPER_DRAFT.md  README.md  STEP5_SUMMARY.md  __init__.py  community_infrastructure.py  dataset_engineering.py  evaluation_metrics.py  evolution.py  leaderboard_system.py  scientific_design.py  visualization.py
src/chemweaver/core/: inference.py  pipeline.py
src/chemweaver/data/: __init__.py  entities.py  provenance.py  reproducibility.py  storage.py
src/chemweaver/data/innovations/: __init__.py
src/chemweaver/utils/: dependencies.py  helpers.py
src/chemweaver/workflow/: __init__.py  cas_engine.py  execution.py  orchestration.py  stages.py
src/chemweaver/workflow/innovations/: __init__.py
src/vsss/: __init__.py  workflow_runner.py
src/vsss/core/: inference.py  pipeline.py
src/vsss/utils/: helpers.py
tests/: __init__.py  test_docs_snippets.py  test_pipeline_smoke.py  test_workflow_runner.py
