[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chemweaver"
version = "1.0.3"
description = "Reproducible, uncertainty-aware virtual screening infrastructure for prospective drug discovery"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ChemWeaver Development Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "rdkit>=2022.03.1",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    
    # Data storage and processing
    "h5py>=3.6.0",
    "pyarrow>=6.0.0",
    "jsonschema>=4.0.0",
    
    # AI/ML dependencies
    "torch>=1.12.0",
    "torch-geometric>=2.0.0",
    "transformers>=4.15.0",
    "scipy>=1.7.0",
    
    # Workflow and deployment
    "docker>=5.0.0",
    
    # Benchmarking
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.scripts]
chemweaver = "chemweaver.workflow_runner:main"

[project.urls]
Homepage = "https://github.com/Benjamin-JHou/ChemWeaver"
Repository = "https://github.com/Benjamin-JHou/ChemWeaver"
Documentation = "https://github.com/Benjamin-JHou/ChemWeaver/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
